[metadata]
name = blosum
version = 1.1.2
description = A simple BLOSUM toolbox without dependencies.
long_description = file: README.md
long_description_content_type=text/markdown
keywords = BLOSUM, reader, bio, bioinformatics, blosum62, blosum45, blosum50, blosum90
home-page = https://github.com/not-a-feature/blosum
author = Jules Kreuer / not_a_feature
license = gpl-3.0
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    blosum
python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    flake8>=3.9
    tox>=3.20

[options.package_data]
frameshift_aware_alignment = py.typed

[flake8]
max-line-length = 100

[pytest]
xfail_strict=true
